--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,6 @@
 .holder{
 	width:200px;
 	display:grid;
-	grid-template-columns: repeat(2, 60px 1fr);
+	grid-template-columns: repeat(100px 100px);
 	
 }
