--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,6 @@
 .holder{
 	width:200px;
 	display:grid;
-	grid-template-columns: repeat(100px 100px);
-	
+	grid-template-columns: repeat(100px 100px);	
+	grid-template-rows:repeat(100px 100px);	
 }
