--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@
 /* Your CSS Code here. */
 .holder{
 	width:200px;
+	height:200px;
 	display:grid;
-	grid-template-columns: repeat(100px 100px);	
-	grid-template-rows:repeat(100px 100px);	
+	grid-template-columns: repeat(2,1fr);	
+	grid-template-rows:repeat(2, 1fr);	
 }
